# stock-market-project

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .pylintrc  README.md  pyproject.toml
notebooks/exploring_data/: looking_at_data.ipynb
notebooks/homeworks/: h1.ipynb
